--- a/frontend/career-bridge-mena-web/src/pages/Main/Main.scss
+++ b/frontend/career-bridge-mena-web/src/pages/Main/Main.scss
@@ -4,7 +4,7 @@
         grid-template-columns: 20rem auto;
         grid-template-rows: 5rem auto;
         grid-template-areas: "header header" "nav main";
-        min-height: 100%;
+        height: 100%;
 
     header{
         display: flex;
@@ -48,18 +48,21 @@
 
     main{
         grid-area: main;
+        overflow-y:scroll;
+        overflow-x: hidden;
     }
 
 
-    main>section{
+    main>.tab>section{
         background: #FFFFFF;
         box-shadow: 0px 4px 143px -59px rgba(0, 0, 0, 0.25);
         border-radius: 8px;
         margin: 4rem;
         padding:2rem;
+        position: relative;
     }
 
-    main>section h2{
+    main>.tab>section h2{
         color: var(--secondary);
     }
 
@@ -82,6 +85,536 @@
         flex-direction: column;
         gap:0.5rem;
     }
+
+    .mentor-info{
+        display: flex;
+        flex-direction: row;
+        gap:1rem;
+        margin-top:1rem;
+        justify-items: stretch;
+    }
+
+    .mentor-info form{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 0.5rem;
+        padding: 1rem;
+        background-color: var(--gray-1);
+        border-radius: 6px;
+        
+        box-sizing: border-box;
+    }
+
+    .mentor-info form input:disabled{
+        background: none;
+    }
+
+    .mentor-info h1, .seeker-info h1{
+        background: var(--secondary);
+        padding:1rem;
+        margin:0;
+        border-radius: 6px;
+        color:white;
+        display: grid;
+        align-items: center;
+    }
+
+    .seeker-info h1{
+        background-color:var(--yellow);
+    }
+
+    .seeker-info{
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        padding: 1rem;
+    }
+
+    .seeker-info form{
+        display: flex;
+        flex-direction: column;
+        gap:1rem;
+    }
+
+    .seeker-info textarea{
+        resize: none;
+        height: 100px;
+        padding: 1rem;
+
+    }
+
+    .education_records{
+        background-color: #E8EFFF;
+        padding: 2rem;
+        margin: 2rem;
+        border-radius: 6px;
+    }
+
+    .flexer{
+        display:flex;
+        justify-content:space-between;
+        align-items: center;
+    }
+
+    .date{
+        font-size: 12px;
+    }
+
+    .university{
+        padding-bottom: 2rem;   
+    }
+
+    .spacer{
+        margin-top: 2rem;
+        display: flex;
+        gap: 6rem;
+    }
+
+    a{
+        color:var(--main);
+        font-weight: bold;
+    }
+
+    .score{
+        font-weight: bold;
+    }
+    
+    .major:disabled{
+        background-color: transparent;
+        width: 30rem;
+        padding-left:0;
+    }
+
+    .education_records textarea{
+        resize: horizontal;
+    }
+    .education_records input:disabled,.education_records textarea:disabled {
+        background-color: transparent;
+        border:none;
+    }
+
+    .list-item{
+        border-radius: 6px;
+        border: 1px solid var(--gray-1);
+        padding: 1rem;
+        margin: 0.5rem 0;
+        box-sizing: border-box;
+    }
+
+    .card-count label{
+        font-weight: normal;
+        color:#9e9e9e;
+        
+        margin:0;
+        padding:0;
+        font-size: 0.7rem;
+    }
+    .card-count p{
+        margin:0;
+        font-size: 2rem;
+        font-weight: bold;
+        color:#7a7a7a;
+    }
+
+    .list-item{
+
+        display: flex;
+        flex-direction: row;
+        gap: 2rem;
+        width: 100%;
+        justify-content: space-between;
+
+    }
+
+    .list-item .card-count{
+        text-align: right;
+    }
+
+    .list-view header{
+        display: block;
+        text-align: right;
+        margin-right: 0;
+        padding-right: 0;
+
+    }
+
+    .list-view header button{
+        background-color: transparent;
+        color: var(--gray-1);
+    }
+
+    .floating-header{
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        padding:4rem;
+        padding-bottom: 0;
+        box-sizing: border-box;
+    }
+
+
+    #fields-tab{
+
+        .field-card{
+
+            border:1px solid var(--gray-1);
+            border-radius: 6px;
+            margin:0.4rem;
+            padding: 0.4rem;
+            display: inline-grid;
+            grid-template-columns: 50% 50%;
+            grid-template-rows: 50% 50%;
+            width:fit-content;
+            box-sizing: border-box;
+        }
+
+        .field-card button,.list-item button {
+            height: min-content;
+            width: min-content;
+            padding: 0.4rem;
+        }
+
+        .field-card h3, .list-item h3{
+            color:var(--main);
+            font-weight: normal;
+            margin:0;
+        }
+
+        .field-card .card-count{
+            padding:0.5rem;
+            box-sizing: border-box;
+        }
+
+        .field-card>div:nth-of-type(1){
+            
+            border-right: 1px solid var(--gray-1);
+        }
+
+        
+
+        .followed-fields>.card-count{
+            position: absolute;
+            top:0;
+            right:0;
+            margin-top:2rem;
+            margin-right:2rem;
+        }
+
+        
+        
+        .list-item p{
+            font-style: italic;
+        }
+
+        
+
+        
+    }
+
+    .add-entity-form{
+        padding: 4rem;
+        display: flex;
+        
+        flex-direction: column;
+        gap: 1rem;
+
+        h1{
+            color:var(--secondary);
+            border-bottom: solid 1px var(--gray-1);
+            padding-bottom: 1rem;
+        }
+
+        textarea{
+            resize: vertical;
+            padding: 1rem;
+        }
+        button{
+            width: fit-content;
+        }
+
+        input[type="checkbox"]{
+            width: min-content;
+            display: block;
+            float: right;
+            
+        }
+
+
+    }
+
+    #organizations-tab{
+        .counts{
+            display: flex;
+            flex-direction: row;
+            gap: 1rem;
+
+        }
+    }
+
+    .badge{
+        background-color: var(--yellow);
+        padding:0.3rem 0.6rem;
+        border-radius: 6px;
+        position: absolute;
+        top:3rem;
+        right:3rem;
+    }
+
+    section table{
+        border-collapse: collapse;
+    }
+    section table {
+
+        th, td{
+        
+        border:1px solid var(--gray-1);
+        padding: 0.5rem 1rem;
+        text-align: left;
+        }
+    }
+
+    #org-detail{
+
+        section .content{
+            display: flex;
+            gap: 2rem;
+        }
+        .stats{
+            display: flex;
+            flex-direction: column;
+            gap:2rem;
+            width: 50%;
+        }
+
+        .stats>div{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            text-align: right;
+        }
+
+    }
+
+    #opportunities{
+
+        .list-group{
+            >h3{
+                color:var(--gray-1);
+            }
+        }
+
+        .summary .list-view{
+            header{
+                display: none;
+            }
+        }
+
+        .list-item{
+            display: flex;
+            flex-direction: column;
+            gap:0;
+
+            .upper{
+               
+                display: grid;
+                grid-template-columns: 12rem auto 8rem;
+                gap:1rem;
+
+                h3{
+                    margin:0;
+                }
+            }
+
+            .stats{
+                display: flex;
+                flex-direction: row;
+                gap: 1rem;
+            }
+
+            .info{
+                display: flex;
+                flex-direction: column;
+            }
+
+            .contact{
+                display: flex;
+                flex-direction: column;
+                text-align: right;
+            }
+
+            .extra{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                margin-top:1rem;
+                padding-top: 1rem;
+                border-top: 1px solid var(--gray-1);
+            }
+            .extra>div{
+                display: flex;
+                flex-direction: column;
+            }
+
+            .extra>div label{
+                text-align: left;
+                padding:0;
+            }
+        }
+    
+
+        
+
+    }
+
+    #opp-detail{
+        .buttons{
+            position: absolute;
+            top:3rem;
+            right:2rem;
+            display: flex;
+            gap:1rem;
+        }
+
+        .links{
+            display: grid;
+            width: 100%;
+            grid-template-columns: auto auto 70%;
+
+            a:last-child{
+                text-align: right;
+            }
+        }
+
+        .description{
+            background-color: #f1f1f1;
+            padding: 1rem;
+            border-radius: 6px;
+            flex-grow: 10;
+            margin:0;
+
+        }
+
+        .middle{
+            display: flex;
+            gap: 3rem;
+            justify-items: stretch;
+            margin:1rem 0;
+        }
+
+        .mentor-group{
+            background-color: #fbfbfb;
+            padding: 1rem 3rem;
+        }
+
+        .mentor-group .card-count{
+            flex-direction: row;
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .stats{
+            border-bottom: 1px solid var(--gray-1);
+            border-top: 1px solid var(--gray-1);
+            padding: 1rem 0;
+            display: flex;
+            justify-content: space-between;
+            text-align: center;
+        }
+
+        #rating-popup{
+            position: fixed;
+            top: 40%;
+            right:20%;
+            background-color: var(--gray-1);
+        }
+
+        
+    }
+
+    #message-view{
+        position: fixed;
+        background-color: var(--main);
+        bottom:0;
+        right:4rem;
+        border-top-left-radius: 6px;
+        border-top-right-radius: 6px;
+        padding:0.5rem 1rem;
+
+
+        display: flex;
+        flex-direction: column;
+
+        h1{
+            color:white;
+            font-size:1rem;
+        }
+
+        .main{
+            display: flex;
+            flex-direction: column;
+        }
+
+        .messages-container{
+            max-height: 20vh;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            background-color: white;
+            
+        }
+
+        p{
+
+            font-size: 0.8rem;
+            position:relative;
+            width: 100%;
+            padding: 0.5rem;
+            box-sizing: border-box;
+
+            b{
+            background: var(--secondary);
+            color:white;
+            padding: 0.5rem;
+            width: fit-content;
+            font-weight: normal;
+            border-radius: 6px;
+            box-sizing: border-box;
+            }
+
+            
+        }
+
+        p.sent{
+            align-self: flex-end;
+            text-align: right;
+            
+            b{
+            background-color:var(--yellow);
+            }
+        }
+
+        p::after{
+            content:attr(data-time);
+            position: absolute;
+            width: max-content;
+            font-size: 0.5rem;
+            bottom:-0.6rem;
+            left:1rem;
+
+        }
+
+        p.sent::after{
+            left: auto;
+            right:1rem;
+        }
+
+        button{
+            background-color: var(--secondary);
+        }
+    }
+
     
 
 }
